--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,6 +23,7 @@ x-server_settings: &server_settings
     - ENV=dev
     - GCP_PROJECT_ID=$GCP_PROJECT_ID
     - GCP_REGION=$GCP_REGION
+    - HOST=$HOST
     - HUGGINGFACE_API=$HUGGINGFACE_API
     - HUGGINGFACE_INFERENCE_API_TOKEN=$HUGGINGFACE_INFERENCE_API_TOKEN
     - LDAP_ADMIN_USERNAME=$LDAP_ADMIN_USERNAME
@@ -35,12 +36,15 @@ x-server_settings: &server_settings
     - MAGE_BASE_PATH=$MAGE_BASE_PATH
     - MAGE_DATABASE_CONNECTION_URL=$DATABASE_CONNECTION_URL
     - MAGE_DATA_DIR=$MAGE_DATA_DIR
+    - MANAGE_INSTANCE=$MANAGE_INSTANCE
     - MAX_NUMBER_OF_FILE_VERSIONS=$MAX_NUMBER_OF_FILE_VERSIONS
     - NEW_RELIC_CONFIG_PATH=$NEW_RELIC_CONFIG_PATH
     - OPENAI_API_KEY=$OPENAI_API_KEY
     - OTEL_EXPORTER_OTLP_ENDPOINT=${OTEL_EXPORTER_OTLP_ENDPOINT}
     - OTEL_EXPORTER_OTLP_HTTP_ENDPOINT=${OTEL_EXPORTER_OTLP_HTTP_ENDPOINT}
     - OTEL_PYTHON_TORNADO_EXCLUDED_URLS=$OTEL_PYTHON_TORNADO_EXCLUDED_URLS
+    - PORT=$PORT
+    - PROJECT=$PROJECT
     - REPLICATE_API_TOKEN=$REPLICATE_API_TOKEN
     - REQUIRE_USER_AUTHENTICATION=$REQUIRE_USER_AUTHENTICATION
     - REQUIRE_USER_PERMISSIONS=$REQUIRE_USER_PERMISSIONS
