--- a/requirements.txt
+++ b/requirements.txt
@@ -29,7 +29,7 @@ polars>=0.18.0, <0.19.2
 protobuf~=4.21.12
 pyarrow==14.0.1
 python-dateutil==2.8.2
-pytz==2022.2.1
+pytz>=2022.2.1
 pyyaml~=6.0
 redis~=5.0.1
 requests~=2.31.0
