--- a/mage_ai/frontend/package.json
+++ b/mage_ai/frontend/package.json
@@ -44,6 +44,7 @@
     "cronstrue": "^2.31.0",
     "d3-color": "^3.1.0",
     "dangerously-set-html-content": "^1.0.13",
+    "global": "^4.4.0",
     "js-cookie": "^3.0.1",
     "jwt-decode": "^3.1.2",
     "local-storage": "^2.0.0",
@@ -105,7 +106,7 @@
     "@typescript-eslint/eslint-plugin": "^5.25.0",
     "@typescript-eslint/parser": "^6.6.0",
     "eslint": "8.15.0",
-    "eslint-config-next": "12.1.6",
+    "eslint-config-next": "^14.2.3",
     "eslint-plugin-storybook": "^0.6.13",
     "tsconfig-paths-webpack-plugin": "^3.5.2",
     "typescript": "4.6.4",
