add more mem helpers

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,9 +19,6 @@ x-server_settings: &server_settings
     - ECS_TASK_DEFINITION=$ECS_TASK_DEFINITION
     - ENABLE_NEW_RELIC=$ENABLE_NEW_RELIC
     - ENABLE_PROMETHEUS=$ENABLE_PROMETHEUS
-    - OTEL_EXPORTER_OTLP_ENDPOINT=${OTEL_EXPORTER_OTLP_ENDPOINT}
-    - OTEL_EXPORTER_OTLP_HTTP_ENDPOINT=${OTEL_EXPORTER_OTLP_HTTP_ENDPOINT}
-    - OTEL_PYTHON_TORNADO_EXCLUDED_URLS=$OTEL_PYTHON_TORNADO_EXCLUDED_URLS
     - ENV=dev
     - GCP_PROJECT_ID=$GCP_PROJECT_ID
     - GCP_REGION=$GCP_REGION
@@ -35,21 +32,28 @@ x-server_settings: &server_settings
     - LDAP_BIND_PASSWORD=$LDAP_BIND_PASSWORD
     - LDAP_SERVER=$LDAP_SERVER
     - MAGE_BASE_PATH=$MAGE_BASE_PATH
-    - MAGE_DATA_DIR=$MAGE_DATA_DIR
     - MAGE_DATABASE_CONNECTION_URL=$DATABASE_CONNECTION_URL
+    - MAGE_DATA_DIR=$MAGE_DATA_DIR
+    - MAGE_PRESENTERS_DIRECTORY=$MAGE_PRESENTERS_DIRECTORY
     - MAX_NUMBER_OF_FILE_VERSIONS=$MAX_NUMBER_OF_FILE_VERSIONS
     - NEW_RELIC_CONFIG_PATH=$NEW_RELIC_CONFIG_PATH
     - OPENAI_API_KEY=$OPENAI_API_KEY
+    - OTEL_EXPORTER_OTLP_ENDPOINT=${OTEL_EXPORTER_OTLP_ENDPOINT}
+    - OTEL_EXPORTER_OTLP_HTTP_ENDPOINT=${OTEL_EXPORTER_OTLP_HTTP_ENDPOINT}
+    - OTEL_PYTHON_TORNADO_EXCLUDED_URLS=$OTEL_PYTHON_TORNADO_EXCLUDED_URLS
     - REQUIRE_USER_AUTHENTICATION=$REQUIRE_USER_AUTHENTICATION
     - REQUIRE_USER_PERMISSIONS=$REQUIRE_USER_PERMISSIONS
-    - SERVER_VERBOSITY=$SERVER_VERBOSITY
-    - SERVER_LOGGING_TEMPLATE=${SERVER_LOGGING_TEMPLATE:-%(levelname)s:%(name)s:%(message)s}
-    - path_to_keyfile=$GCP_PATH_TO_CREDENTIALS
     - SCHEDULER_TRIGGER_INTERVAL=$SCHEDULER_TRIGGER_INTERVAL
+    - SERVER_LOGGING_TEMPLATE=${SERVER_LOGGING_TEMPLATE:-%(levelname)s:%(name)s:%(message)s}
+    - SERVER_VERBOSITY=$SERVER_VERBOSITY
+    - SMTP_EMAIL=$SMTP_EMAIL
+    - SMTP_PASSWORD=$SMTP_PASSWORD
+    - path_to_keyfile=$GCP_PATH_TO_CREDENTIALS
   ports:
     - 6789:6789
   volumes:
     - .:/home/src
+    - ./ml/mlops:/home/src/mlops
     - ~/.aws:/root/.aws
     - ~/.mage_data:/root/.mage_data
   restart: on-failure:5
