--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,7 +26,21 @@ sourcery = "*"
 [tool.isort]
 profile = "black"
 
-
 [build-system]
 requires = ["setuptools>=42"]
 build-backend = "setuptools.build_meta"
+
+[tool.ruff.lint]
+exclude = [
+  "mage_ai/data_preparation/templates",
+  "mage_ai/orchestration/db/migrations/versions",
+]
+ignore = []
+select = ["E", "F", "W"]
+
+[tool.ruff.lint.per-file-ignores]
+"mage_ai/orchestration/pipeline_scheduler.py" = ["F401", "F403"]
+
+[tool.ruff.format]
+quote-style = "single"
+indent-style = "space"
