--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -41,6 +41,16 @@ x-server_settings: &server_settings
     - SCHEDULER_TRIGGER_INTERVAL=$SCHEDULER_TRIGGER_INTERVAL
     - SERVER_LOGGING_TEMPLATE=${SERVER_LOGGING_TEMPLATE:-%(levelname)s:%(name)s:%(message)s}
     - SERVER_VERBOSITY=$SERVER_VERBOSITY
+    - PYTHONPATH=$PYTHONPATH
+    - MAGE_PRESENTERS_DIRECTORY=$MAGE_PRESENTERS_DIRECTORY
+    - EXPERIMENTS_DB=$EXPERIMENTS_DB
+    - EXPERIMENTS_TRACKING_URI=$EXPERIMENTS_TRACKING_URI
+    - SMTP_EMAIL=$SMTP_EMAIL
+    - SMTP_PASSWORD=$SMTP_PASSWORD
+    - HUGGINGFACE_API=$HUGGINGFACE_API
+    - HUGGINGFACE_INFERENCE_API_TOKEN=$HUGGINGFACE_INFERENCE_API_TOKEN
+    - OPENAI_API_KEY=$OPENAI_API_KEY
+
     - path_to_keyfile=$GCP_PATH_TO_CREDENTIALS
   ports:
     - 6789:6789
