[td] Fix interactions, triggers, dynamic blocks, charts, and more (#5064)
# Description

- [x] Dynamic child block divide by zero
- [x] Interactions don’t work for platform
- [x] Triggers save to code doesn’t work on multi platform projects
- [x] Dashboard data source returning model trying to copy string in
convert_value else statement
- [x] Charts don’t refresh on dashboard
- [x] Improve creating charts for XGBoost

---------

Co-authored-by: mager <supreme@mage.ai>

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,3 @@
-version: "3"
 x-server_settings: &server_settings
   image: mage/data
   build:
@@ -22,8 +21,6 @@ x-server_settings: &server_settings
     - ENV=dev
     - GCP_PROJECT_ID=$GCP_PROJECT_ID
     - GCP_REGION=$GCP_REGION
-    - HUGGINGFACE_API=$HUGGINGFACE_API
-    - HUGGINGFACE_INFERENCE_API_TOKEN=$HUGGINGFACE_INFERENCE_API_TOKEN
     - LDAP_ADMIN_USERNAME=$LDAP_ADMIN_USERNAME
     - LDAP_AUTHENTICATION_FILTER=$LDAP_AUTHENTICATION_FILTER
     - LDAP_AUTHORIZATION_FILTER=$LDAP_AUTHORIZATION_FILTER
@@ -34,10 +31,8 @@ x-server_settings: &server_settings
     - MAGE_BASE_PATH=$MAGE_BASE_PATH
     - MAGE_DATABASE_CONNECTION_URL=$DATABASE_CONNECTION_URL
     - MAGE_DATA_DIR=$MAGE_DATA_DIR
-    - MAGE_PRESENTERS_DIRECTORY=$MAGE_PRESENTERS_DIRECTORY
     - MAX_NUMBER_OF_FILE_VERSIONS=$MAX_NUMBER_OF_FILE_VERSIONS
     - NEW_RELIC_CONFIG_PATH=$NEW_RELIC_CONFIG_PATH
-    - OPENAI_API_KEY=$OPENAI_API_KEY
     - OTEL_EXPORTER_OTLP_ENDPOINT=${OTEL_EXPORTER_OTLP_ENDPOINT}
     - OTEL_EXPORTER_OTLP_HTTP_ENDPOINT=${OTEL_EXPORTER_OTLP_HTTP_ENDPOINT}
     - OTEL_PYTHON_TORNADO_EXCLUDED_URLS=$OTEL_PYTHON_TORNADO_EXCLUDED_URLS
@@ -46,14 +41,21 @@ x-server_settings: &server_settings
     - SCHEDULER_TRIGGER_INTERVAL=$SCHEDULER_TRIGGER_INTERVAL
     - SERVER_LOGGING_TEMPLATE=${SERVER_LOGGING_TEMPLATE:-%(levelname)s:%(name)s:%(message)s}
     - SERVER_VERBOSITY=$SERVER_VERBOSITY
+    - PYTHONPATH=$PYTHONPATH
+    - MAGE_PRESENTERS_DIRECTORY=$MAGE_PRESENTERS_DIRECTORY
+    - EXPERIMENTS_DB=$EXPERIMENTS_DB
+    - EXPERIMENTS_TRACKING_URI=$EXPERIMENTS_TRACKING_URI
     - SMTP_EMAIL=$SMTP_EMAIL
     - SMTP_PASSWORD=$SMTP_PASSWORD
+    - HUGGINGFACE_API=$HUGGINGFACE_API
+    - HUGGINGFACE_INFERENCE_API_TOKEN=$HUGGINGFACE_INFERENCE_API_TOKEN
+    - OPENAI_API_KEY=$OPENAI_API_KEY
+
     - path_to_keyfile=$GCP_PATH_TO_CREDENTIALS
   ports:
     - 6789:6789
   volumes:
     - .:/home/src
-    - ./ml/mlops:/home/src/mlops
     - ~/.aws:/root/.aws
     - ~/.mage_data:/root/.mage_data
   restart: on-failure:5
