--- a/.gitignore
+++ b/.gitignore
@@ -134,6 +134,7 @@ mage_ai/server/data/files/**
 default_repo
 instance_metadata.json
 ~/.mage_data
+mage_data/
 
 # test notebook
 test.ipynb
@@ -184,3 +185,5 @@ playwright-report/
 package-lock.json
 package.json
 yarn.lock
+
+mlruns/
