--- a/mage_ai/frontend/package.json
+++ b/mage_ai/frontend/package.json
@@ -107,7 +107,9 @@
     "@typescript-eslint/parser": "^6.6.0",
     "eslint": "8.15.0",
     "eslint-config-next": "^14.2.3",
+    "eslint-plugin-react-hooks": "^4.6.2",
     "eslint-plugin-storybook": "^0.6.13",
+    "eslint-plugin-unused-imports": "^3.2.0",
     "tsconfig-paths-webpack-plugin": "^3.5.2",
     "typescript": "4.6.4",
     "yarn-audit-fix": "^9.3.7"
