--- a/requirements.txt
+++ b/requirements.txt
@@ -23,6 +23,7 @@ jupyter-server-proxy==3.2.3
 jupyter-server==1.23.5
 jupyter_client==7.4.4
 ldap3==2.9.1
+memory_profiler
 newrelic==8.8.0
 numpy>=1.22.0
 pandas>=1.3.0
