--- a/requirements.txt
+++ b/requirements.txt
@@ -29,6 +29,7 @@ numpy>=1.22.0
 pandas>=1.3.0
 polars>=0.18.0, <0.19.2
 protobuf~=4.21.12
+psutil==5.9.8
 pyarrow==14.0.1
 python-dateutil==2.8.2
 pytz>=2022.2.1
