[td] Fix infer variables

--- a/.gitignore
+++ b/.gitignore
@@ -164,9 +164,11 @@ docker-compose.override.yml
 
 # front-end
 node_modules
-.npmrc
-mage_ai/server/frontend_dist_base_path
 .env
+.npmrc
+# mage_ai/server/frontend_dist
+# mage_ai/server/frontend_dist_base_path_template
+mage_ai/server/frontend_dist_base_path
 
 # Scratch files
 scratch*
@@ -181,10 +183,10 @@ playwright-report/
 **/TEST_OUTPUT
 **/TEST_STATE.json
 **/TEST_CONFIG*.json
-**/TEST_*
 package-lock.json
 package.json
 yarn.lock
 mlfow.db
 mlruns/
 test.py
+test_data*
