--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -53,6 +53,7 @@ x-server_settings: &server_settings
     - SERVER_VERBOSITY=$SERVER_VERBOSITY
     - SMTP_EMAIL=$SMTP_EMAIL
     - SMTP_PASSWORD=$SMTP_PASSWORD
+    - VARIABLE_DATA_OUTPUT_META_CACHE=$VARIABLE_DATA_OUTPUT_META_CACHE
 
     - path_to_keyfile=$GCP_PATH_TO_CREDENTIALS
   ports:
