--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,6 +10,7 @@ x-server_settings: &server_settings
     - AWS_SECRET_ACCESS_KEY=$AWS_SECRET_ACCESS_KEY
     - AWS_SESSION_TOKEN=$AWS_SESSION_TOKEN
     - DEBUG=$DEBUG
+    - DEBUG_FILE_IO=$DEBUG_FILE_IO
     - DEBUG_MEMORY=$DEBUG_MEMORY
     - DEUS_EX_MACHINA=$DEUS_EX_MACHINA
     - DISABLE_API_TERMINAL_OUTPUT=$DISABLE_API_TERMINAL_OUTPUT
