[td] Dynamic blocks use the new memory enhancements (#5106)
- Adapt dynamic blocks to use optionally use generators
- Adapt to use new reader and writer for PyArrow
- Fix a lot of UI
- Variable meta info reading caching to optimize app performance
- Memory tracking
- Show block run runtime in the table view for Tim
- A lot more

---------

Co-authored-by: mager <supreme@mage.ai>

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,6 +10,8 @@ x-server_settings: &server_settings
     - AWS_SECRET_ACCESS_KEY=$AWS_SECRET_ACCESS_KEY
     - AWS_SESSION_TOKEN=$AWS_SESSION_TOKEN
     - DEBUG=$DEBUG
+    - DEBUG_FILE_IO=$DEBUG_FILE_IO
+    - DEBUG_MEMORY=$DEBUG_MEMORY
     - DEUS_EX_MACHINA=$DEUS_EX_MACHINA
     - DISABLE_API_TERMINAL_OUTPUT=$DISABLE_API_TERMINAL_OUTPUT
     - DISABLE_DATABASE_TERMINAL_OUTPUT=$DISABLE_DATABASE_TERMINAL_OUTPUT
@@ -37,9 +39,9 @@ x-server_settings: &server_settings
     - MAGE_DATA_DIR=$MAGE_DATA_DIR
     - MAGE_PRESENTERS_DIRECTORY=$MAGE_PRESENTERS_DIRECTORY
     - MAX_NUMBER_OF_FILE_VERSIONS=$MAX_NUMBER_OF_FILE_VERSIONS
-    - MEMORY_MANAGER_PANDAS_VERSION=1
-    - MEMORY_MANAGER_POLARS_VERSION=1
-    - MEMORY_MANAGER_VERSION=1
+    - MEMORY_MANAGER_PANDAS_VERSION=$MEMORY_MANAGER_PANDAS_VERSION
+    - MEMORY_MANAGER_POLARS_VERSION=$MEMORY_MANAGER_POLARS_VERSION
+    - MEMORY_MANAGER_VERSION=$MEMORY_MANAGER_VERSION
     - NEW_RELIC_CONFIG_PATH=$NEW_RELIC_CONFIG_PATH
     - OPENAI_API_KEY=$OPENAI_API_KEY
     - OTEL_EXPORTER_OTLP_ENDPOINT=${OTEL_EXPORTER_OTLP_ENDPOINT}
@@ -52,6 +54,7 @@ x-server_settings: &server_settings
     - SERVER_VERBOSITY=$SERVER_VERBOSITY
     - SMTP_EMAIL=$SMTP_EMAIL
     - SMTP_PASSWORD=$SMTP_PASSWORD
+    - VARIABLE_DATA_OUTPUT_META_CACHE=$VARIABLE_DATA_OUTPUT_META_CACHE
 
     - path_to_keyfile=$GCP_PATH_TO_CREDENTIALS
   ports:
