--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,6 +15,7 @@ x-server_settings: &server_settings
     - DEUS_EX_MACHINA=$DEUS_EX_MACHINA
     - DISABLE_API_TERMINAL_OUTPUT=$DISABLE_API_TERMINAL_OUTPUT
     - DISABLE_DATABASE_TERMINAL_OUTPUT=$DISABLE_DATABASE_TERMINAL_OUTPUT
+    - DYNAMIC_BLOCKS_VERSION=$DYNAMIC_BLOCKS_VERSION
     - ECS_CLUSTER_NAME=$ECS_CLUSTER_NAME
     - ECS_CONTAINER_NAME=$ECS_CONTAINER_NAME
     - ECS_TASK_DEFINITION=$ECS_TASK_DEFINITION
