--- a/requirements.txt
+++ b/requirements.txt
@@ -11,6 +11,7 @@ croniter==1.3.7
 cryptography==41.0.6
 dask>=2022.2.0
 datadog==0.44.0
+faster-fifo
 freezegun==1.2.2
 great-expectations==0.18.12
 httpx==0.23.1
