--- a/.github/workflows/publish_to_pypi.yml
+++ b/.github/workflows/publish_to_pypi.yml
@@ -33,9 +33,12 @@ jobs:
       with:
         password: ${{ secrets.TEST_PYPI_API_TOKEN }}
         repository_url: https://test.pypi.org/legacy/
+        verbose: true
+        skip-existing: true
     - name: Publish distribution to PyPI
       if: github.event.inputs.dry_run == 'false'
       uses: pypa/gh-action-pypi-publish@release/v1.8
       with:
         password: ${{ secrets.PYPI_API_TOKEN }}
         verbose: true
+        skip-existing: true
