--- a/.github/workflows/publish_to_pypi.yml
+++ b/.github/workflows/publish_to_pypi.yml
@@ -29,12 +29,16 @@ jobs:
         python setup.py sdist bdist_wheel
     - name: Publish distribution to Test PyPI
       if: github.event.inputs.dry_run == 'true'
-      uses: pypa/gh-action-pypi-publish@master
+      uses: pypa/gh-action-pypi-publish@release/v1.8
       with:
         password: ${{ secrets.TEST_PYPI_API_TOKEN }}
         repository_url: https://test.pypi.org/legacy/
+        verbose: true
+        skip-existing: true
     - name: Publish distribution to PyPI
       if: github.event.inputs.dry_run == 'false'
-      uses: pypa/gh-action-pypi-publish@master
+      uses: pypa/gh-action-pypi-publish@release/v1.8
       with:
         password: ${{ secrets.PYPI_API_TOKEN }}
+        verbose: true
+        skip-existing: true
