--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -28,6 +28,7 @@ x-server_settings: &server_settings
     - GCP_REGION=$GCP_REGION
     - HUGGINGFACE_API=$HUGGINGFACE_API
     - HUGGINGFACE_INFERENCE_API_TOKEN=$HUGGINGFACE_INFERENCE_API_TOKEN
+    - KERNEL_MANAGER=$KERNEL_MANAGER
     - LDAP_ADMIN_USERNAME=$LDAP_ADMIN_USERNAME
     - LDAP_AUTHENTICATION_FILTER=$LDAP_AUTHENTICATION_FILTER
     - LDAP_AUTHORIZATION_FILTER=$LDAP_AUTHORIZATION_FILTER
