--- a/mage_ai/frontend/package.json
+++ b/mage_ai/frontend/package.json
@@ -46,7 +46,7 @@
     "dangerously-set-html-content": "^1.0.13",
     "global": "^4.4.0",
     "html-react-parser": "^5.1.10",
-    "js-cookie": "^3.0.1",
+    "js-cookie": "^3.0.5",
     "jwt-decode": "^3.1.2",
     "local-storage": "^2.0.0",
     "moment": "^2.29.4",
@@ -65,6 +65,7 @@
     "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "18.1.0",
     "react-dropzone": "^14.2.3",
+    "react-grid-system": "^8.2.0",
     "react-hooks-global-state": "^2.0.0-rc.0",
     "react-loading": "^2.0.3",
     "react-markdown": "^8.0.7",
