--- a/mage_ai/frontend/tsconfig.json
+++ b/mage_ai/frontend/tsconfig.json
@@ -20,6 +20,9 @@
       "@interfaces/*": [
         "interfaces/*"
       ],
+      "@mana/*": [
+        "mana/*"
+      ],
       "@oracle/*": [
         "oracle/*"
       ],
@@ -34,7 +37,11 @@
       ]
     },
     "target": "es6",
-    "lib": ["dom", "dom.iterable", "esnext"],
+    "lib": [
+      "dom",
+      "dom.iterable",
+      "esnext"
+    ],
     "allowJs": true,
     "skipLibCheck": true,
     "strict": false,
@@ -48,6 +55,12 @@
     "jsx": "preserve",
     "incremental": true
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
-  "exclude": ["node_modules"]
+  "include": [
+    "next-env.d.ts",
+    "**/*.ts",
+    "**/*.tsx"
+  ],
+  "exclude": [
+    "node_modules"
+  ]
 }
