--- a/mage_ai/frontend/package.json
+++ b/mage_ai/frontend/package.json
@@ -8,6 +8,7 @@
     "export_prod": "next build && next export -o ../server/frontend_dist",
     "export_prod_base_path": "next build && next export -o ../server/frontend_dist_base_path_template",
     "dev": "next dev",
+    "install_and_test": "yarn install && yarn type",
     "lint": "next lint",
     "start": "next start",
     "type": "next build",
