--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
-    "react-dropzone": "^14.2.3"
+    "react-dropzone": "^14.2.3",
+    "react-grid-system": "^8.2.0"
   }
 }
