--- a/mage_ai/frontend/package.json
+++ b/mage_ai/frontend/package.json
@@ -8,6 +8,7 @@
     "export_prod": "next build && next export -o ../server/frontend_dist",
     "export_prod_base_path": "next build && next export -o ../server/frontend_dist_base_path_template",
     "dev": "next dev",
+    "install_and_test": "yarn install && yarn type",
     "lint": "next lint",
     "start": "next start",
     "type": "next build",
@@ -46,7 +47,7 @@
     "dangerously-set-html-content": "^1.0.13",
     "global": "^4.4.0",
     "html-react-parser": "^5.1.10",
-    "js-cookie": "^3.0.1",
+    "js-cookie": "^3.0.5",
     "jwt-decode": "^3.1.2",
     "local-storage": "^2.0.0",
     "moment": "^2.29.4",
@@ -57,6 +58,7 @@
     "next": "12.3.4",
     "next-cookies": "^2.0.3",
     "next-remove-imports": "^1.0.12",
+    "raw-loader": "^4.0.2",
     "react": "18.1.0",
     "react-calendar": "^3.7.0",
     "react-copy-to-clipboard": "^5.0.2",
@@ -65,6 +67,7 @@
     "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "18.1.0",
     "react-dropzone": "^14.2.3",
+    "react-grid-system": "^8.2.0",
     "react-hooks-global-state": "^2.0.0-rc.0",
     "react-loading": "^2.0.3",
     "react-markdown": "^8.0.7",
