--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -40,6 +40,7 @@ x-server_settings: &server_settings
     - MAGE_DATABASE_CONNECTION_URL=$DATABASE_CONNECTION_URL
     - MAGE_DATA_DIR=$MAGE_DATA_DIR
     - MAGE_PRESENTERS_DIRECTORY=$MAGE_PRESENTERS_DIRECTORY
+    - MATERIA_ENABLED=$MATERIA_ENABLED
     - MAX_NUMBER_OF_FILE_VERSIONS=$MAX_NUMBER_OF_FILE_VERSIONS
     - MEMORY_MANAGER_PANDAS_VERSION=$MEMORY_MANAGER_PANDAS_VERSION
     - MEMORY_MANAGER_POLARS_VERSION=$MEMORY_MANAGER_POLARS_VERSION
