--- a/mage_ai/frontend/package.json
+++ b/mage_ai/frontend/package.json
@@ -20,6 +20,7 @@
     "test:report": "playwright show-report"
   },
   "dependencies": {
+    "@codingame/monaco-vscode-python-default-extension": "^5.2.0",
     "@monaco-editor/react": "^4.6.0",
     "@next/third-parties": "^14.1.0",
     "@types/moment-duration-format": "^2.2.5",
@@ -54,6 +55,9 @@
     "moment-duration-format": "^2.3.2",
     "moment-timezone": "^0.5.43",
     "monaco-editor": "^0.49.0",
+    "monaco-editor-webpack-plugin": "^7.1.0",
+    "monaco-editor-wrapper": "^5.1.2",
+    "monaco-languageclient": "^8.4.0",
     "monaco-themes": "^0.4.4",
     "next": "12.3.4",
     "next-cookies": "^2.0.3",
@@ -83,6 +87,7 @@
     "react-window": "^1.8.10",
     "react-xarrows": "^2.0.2",
     "reaflow": "^5.0.6",
+    "reconnecting-websocket": "^4.4.0",
     "rehype-raw": "^7.0.0",
     "rehype-sanitize": "^6.0.0",
     "remark-gfm": "^3.0.1",
@@ -92,6 +97,8 @@
     "styled-system": "^5.1.5",
     "swr": "^1.3.0",
     "trim-newlines": "^4.0.2",
+    "vscode-jsonrpc": "^8.2.1",
+    "vscode-ws-jsonrpc": "^3.3.1",
     "yaml": "^2.1.3",
     "yarn": "^1.22.21"
   },
