--- a/mage_ai/frontend/package.json
+++ b/mage_ai/frontend/package.json
@@ -116,6 +116,7 @@
     "@types/styled-system": "^5.1.15",
     "@typescript-eslint/eslint-plugin": "^5.25.0",
     "@typescript-eslint/parser": "^6.6.0",
+    "clean-webpack-plugin": "^4.0.0",
     "eslint": "8.15.0",
     "eslint-config-next": "^14.2.3",
     "eslint-plugin-react-hooks": "^4.6.2",
