--- a/mage_ai/frontend/package.json
+++ b/mage_ai/frontend/package.json
@@ -122,6 +122,7 @@
     "eslint-plugin-react-hooks": "^4.6.2",
     "eslint-plugin-storybook": "^0.6.13",
     "eslint-plugin-unused-imports": "^3.2.0",
+    "terser-webpack-plugin": "^5.3.10",
     "tsconfig-paths-webpack-plugin": "^3.5.2",
     "typescript": "4.6.4",
     "yarn-audit-fix": "^9.3.7"
