--- a/mage_ai/frontend/package.json
+++ b/mage_ai/frontend/package.json
@@ -97,6 +97,7 @@
     "styled-components": "^5.3.5",
     "styled-system": "^5.1.5",
     "swr": "^1.3.0",
+    "terser": "^5.31.0",
     "trim-newlines": "^4.0.2",
     "yaml": "^2.1.3",
     "yarn": "^1.22.21"
