optimize render using deferred, lazy, transition, suspense, and web workers

--- a/mage_ai/frontend/package.json
+++ b/mage_ai/frontend/package.json
@@ -99,6 +99,7 @@
     "swr": "^1.3.0",
     "terser": "^5.31.0",
     "trim-newlines": "^4.0.2",
+    "worker-loader": "^3.0.8",
     "yaml": "^2.1.3",
     "yarn": "^1.22.21"
   },
