[td] System browser (#5177)
# Description


https://github.com/mage-ai/mage-ai/assets/1066980/91d7a2b7-83a0-4d29-95d2-ae00b4c2db9d

---------

Co-authored-by: mager <supreme@mage.ai>

--- a/mage_ai/frontend/tsconfig.json
+++ b/mage_ai/frontend/tsconfig.json
@@ -26,6 +26,9 @@
       "@oracle/*": [
         "oracle/*"
       ],
+      "@public/*": [
+        "public/*"
+      ],
       "@storage/*": [
         "storage/*"
       ],
@@ -58,7 +61,8 @@
   "include": [
     "next-env.d.ts",
     "**/*.ts",
-    "**/*.tsx"
+    "**/*.tsx",
+    "workers/*.ts"
   ],
   "exclude": [
     "node_modules"
