--- a/mage_ai/frontend/package.json
+++ b/mage_ai/frontend/package.json
@@ -92,6 +92,7 @@
     "rehype-raw": "^7.0.0",
     "rehype-sanitize": "^6.0.0",
     "remark-gfm": "^3.0.1",
+    "sass": "^1.77.4",
     "storybook": "^7.4.2",
     "styled-bootstrap-grid": "^3.1.2",
     "styled-components": "^5.3.5",
