--- a/mage_ai/frontend/package.json
+++ b/mage_ai/frontend/package.json
@@ -26,6 +26,7 @@
     "@next/third-parties": "^14.1.0",
     "@types/moment-duration-format": "^2.2.5",
     "@types/react-table": "^7.7.12",
+    "@types/vscode": "^1.90.0",
     "@visx/axis": "2.14.0",
     "@visx/curve": "2.1.0",
     "@visx/event": "2.6.0",
