--- a/mage_ai/frontend/package.json
+++ b/mage_ai/frontend/package.json
@@ -7,7 +7,7 @@
     "export": "next build && next export",
     "export_prod": "next build && next export -o ../server/frontend_dist",
     "export_prod_base_path": "next build && next export -o ../server/frontend_dist_base_path_template",
-    "dev": "next dev",
+    "dev": "npx next dev",
     "install_and_test": "yarn install && yarn type",
     "lint": "next lint",
     "start": "next start",
