--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -74,29 +74,8 @@ x-app_settings: &app_settings
   ports:
     - 3000:3000
   volumes:
-    - ./mage_ai/frontend/.env.local:/home/src/mage_ai/frontend/.env.local
-    - ./mage_ai/frontend/.babelrc:/home/src/mage_ai/frontend/.babelrc
-    - ./mage_ai/frontend/.eslintrc.js:/home/src/mage_ai/frontend/.eslintrc.js
-    - ./mage_ai/frontend/api:/home/src/mage_ai/frontend/api
-    - ./mage_ai/frontend/components:/home/src/mage_ai/frontend/components
-    - ./mage_ai/frontend/context:/home/src/mage_ai/frontend/context
-    - ./mage_ai/frontend/hocs:/home/src/mage_ai/frontend/hocs
-    - ./mage_ai/frontend/interfaces:/home/src/mage_ai/frontend/interfaces
-    - ./mage_ai/frontend/mana:/home/src/mage_ai/frontend/mana
-    - ./mage_ai/frontend/next-env.d.ts:/home/src/mage_ai/frontend/next-env.d.ts
-    - ./mage_ai/frontend/next.config.js:/home/src/mage_ai/frontend/next.config.js
-    - ./mage_ai/frontend/next.common.config.js:/home/src/mage_ai/frontend/next.common.config.js
-    - ./mage_ai/frontend/oracle:/home/src/mage_ai/frontend/oracle
-    - ./mage_ai/frontend/package.json:/home/src/mage_ai/frontend/package.json
-    - ./mage_ai/frontend/pages:/home/src/mage_ai/frontend/pages
-    - ./mage_ai/frontend/public:/home/src/mage_ai/frontend/public
-    - ./mage_ai/frontend/scripts:/home/src/mage_ai/frontend/scripts
-    - ./mage_ai/frontend/storage:/home/src/mage_ai/frontend/storage
-    - ./mage_ai/frontend/stories:/home/src/mage_ai/frontend/stories
-    - ./mage_ai/frontend/styles:/home/src/mage_ai/frontend/styles
-    - ./mage_ai/frontend/tsconfig.json:/home/src/mage_ai/frontend/tsconfig.json
-    - ./mage_ai/frontend/utils:/home/src/mage_ai/frontend/utils
-    - ./mage_ai/frontend/yarn.lock:/home/src/mage_ai/frontend/yarn.lock
+    - .:/home/src
+    - node_modules_volume:/home/src/mage_ai/frontend/node_modules
   working_dir: /home/src/mage_ai/frontend
 services:
   server:
@@ -149,6 +128,6 @@ services:
 networks:
   app-network:
     driver: bridge
-# volumes:
-#   node_modules_volume:
-#     driver: local
+volumes:
+  node_modules_volume:
+    driver: local
