--- a/mage_ai/frontend/package.json
+++ b/mage_ai/frontend/package.json
@@ -24,6 +24,7 @@
     "@codingame/monaco-vscode-python-default-extension": "^5.2.0",
     "@monaco-editor/react": "^4.6.0",
     "@next/third-parties": "^14.1.0",
+    "@tanstack/react-query": "^5.45.0",
     "@types/moment-duration-format": "^2.2.5",
     "@types/react-table": "^7.7.12",
     "@types/vscode": "^1.90.0",
