--- a/mage_ai/frontend/package.json
+++ b/mage_ai/frontend/package.json
@@ -51,6 +51,7 @@
     "dangerously-set-html-content": "^1.0.13",
     "global": "^4.4.0",
     "html-react-parser": "^5.1.10",
+    "immutability-helper": "^3.1.1",
     "js-cookie": "^3.0.5",
     "jwt-decode": "^3.1.2",
     "local-storage": "^2.0.0",
