[xy] Try using xlarge in circleci.

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -24,6 +24,7 @@ jobs:
   export_frontend:
     docker:
       - image: 'cimg/base:stable'
+    resource_class: xlarge
     steps:
       - checkout
       - node/install:
