--- a/requirements.txt
+++ b/requirements.txt
@@ -28,7 +28,7 @@ memory_profiler
 newrelic==8.8.0
 numpy>=1.22.0
 pandas>=1.3.0
-polars==0.20.31
+polars>=0.18.0, <0.19.2
 protobuf~=4.21.12
 psutil==5.9.8
 pyarrow==14.0.1
