--- a/mage_ai/frameworks/execution/llm/rag/blocks/load/templates/ingest/configurations.yaml
+++ b/mage_ai/frameworks/execution/llm/rag/blocks/load/templates/ingest/configurations.yaml
@@ -21,7 +21,7 @@ github:
     text:
       style:
         monospace: true
-      type: InteractionInputTypeEnum.TEXT_FIELD
+      type: text_field
   variables:
     url:
       description: 'GitHub repository URL'
