--- a/mage_ai/frontend/package.json
+++ b/mage_ai/frontend/package.json
@@ -115,6 +115,8 @@
     "@storybook/addon-links": "^7.4.2",
     "@storybook/nextjs": "^7.4.2",
     "@storybook/react": "^7.4.2",
+    "@types/lodash": "4.14.112",
+    "@types/lodash-es": "4.14.2",
     "@types/node": "17.0.34",
     "@types/react": "18.3.3",
     "@types/react-dom": "18.0.4",
